--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 		<!--Normalize -->
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />	
 		<!--Custom Styles -->
-		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="css/styles-dist.css" />
 		<!-- Scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<!-- Custom Script -->
-		<script src=""></script>
+		<script src="js/script.js"></script>
 
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -69,72 +69,72 @@
 				</article>
 				<section id="grid" class="item-grid" >							
 					<article class="item item-content item-overlay" data-index-number="1">				
-						<a>
+						<figure>
 							<img class="item-image centered" src="img/item_ebay.png">							
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="2">				
-						<a>
+						<figure>
 							<img class="item-image centered" src="img/item_youtube.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="3">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_blogger.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="4">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_twitter.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 					<article class="item item-content item-overlay" data-index-number="1">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_facebook.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="2">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_google.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="3">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_ebay.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="4">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_youtube.png">
-						</a>
+						<figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 					<article class="item item-content item-overlay" data-index-number="1">				
-						<a>
+						<figure>
 							<img class="item-image centered" src="img/item_twitter.png">
 
-						</a>
+						</figure>
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 
 					<article class="item item-content item-overlay" data-index-number="3">				
-						<a >
+						<figure>
 							<img class="item-image centered" src="img/item_facebook.png">
-				
-						</a>
+						</figure>
+						
 						<p>Lorem ipsum ad his scripta blandit partiendo.</p>
 					</article>
 					<div id="square">
